tests/ui/rfcs/rfc-2632-const-trait-impl/const-default-method-bodies.stderr
error[E0015]: cannot call non-const fn `<NonConstImpl as ConstDefaultFn>::a` in constant functions
  --> $DIR/const-default-method-bodies.rs:24:18
   |
LL |     NonConstImpl.a();
   |                  ^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const fn `<ConstImpl as ConstDefaultFn>::a` in constant functions
  --> $DIR/const-default-method-bodies.rs:26:15
   |
LL |     ConstImpl.a();
   |               ^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0015`.
